# lab12

./: CMakeLists.txt  README.md  cget.cpp
sources/: demo.cpp
